--- a/Sistema de Filas/index.html
+++ b/Sistema de Filas/index.html
@@ -5,11 +5,12 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="static/CSS/style.css">
   <script src="static/script/code.js"></script>
   <title>Fila</title>
 </head>
 
-<body align="center">
+<body>
   <header>
     <h1>Sistema de Filas</h1>
     <h2>
