Modifiquei meu nome no index.html

--- a/Sistema de Filas/index.html
+++ b/Sistema de Filas/index.html
@@ -14,7 +14,7 @@
   <header>
     <h1>Sistema de Filas</h1>
     <h2>
-      by Matheus Leffa Hilbert
+      by Matheus Leffa
     </h2>
   </header>
 
